--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ box-shadow: 0 20px 20px -10px  rgb(66, 165, 245, 0.5);
                               
                                 <a href="https://stevsite.github.io/destination/" class="dropdown-item">Participants</a>
                            
-                                <a href="testimonial.html" class="dropdown-item">TMCS Leaders</a>
+                                <a href="https://stevsite.github.io/testimonial/" class="dropdown-item">TMCS Leaders</a>
                             </div>
                         </div>
                         <a href="https://stevsite.github.io/contacts/" class="nav-item nav-link">Contact</a>
