--- a/index.html
+++ b/index.html
@@ -856,33 +856,33 @@ box-shadow: 0 20px 20px -10px  rgb(66, 165, 245, 0.5);
             <!-- First Slide (visible images) -->
             <div class="carousel-item active">
                 <div class="d-flex justify-content-between">
-                    <img src="img/download (1).png" class="d-block" alt="HSELB" style="width: 110px; height: 80px;object-fit: fill; ">
-                    <img src="img/download (2).jpeg" class="d-block" alt="M" style="width: 110px; height: 100px; object-fit: fill;">
-                    <img src="img/chuo_cha_takwim_15-removebg-preview.png" class="d-block" alt="Takwimu" style="width: 110px; height: 100px; object-fit: fill;">
-                    <img src="img/download (3).png" class="d-block" alt="World Bank" style="width: 110px; height: 90px; object-fit: fill;">
-                    <img src="img/LOGO.jpeg" class="d-block" alt="UNECA" style="width: 120px; height: 86px; object-fit: fill;">
+                    <img src="img/download (1).png" class="d-block" alt="HSELB" style="width: 110px; height: 80px;object-fit: cover; ">
+                    <img src="img/download (2).jpeg" class="d-block" alt="M" style="width: 110px; height: 100px; object-fit: cover;">
+                    <img src="img/chuo_cha_takwim_15-removebg-preview.png" class="d-block" alt="Takwimu" style="width: 110px; height: 100px; object-fit: cover;">
+                    <img src="img/download (3).png" class="d-block" alt="World Bank" style="width: 110px; height: 90px; object-fit: cover;">
+                    <img src="img/LOGO.jpeg" class="d-block" alt="UNECA" style="width: 120px; height: 86px; object-fit: cover;">
                 </div>
             </div>
             
             <!-- Second Slide -->
             <div class="carousel-item">
                 <div class="d-flex justify-content-between">
-                    <img src="img/chuo_cha_takwim_15-removebg-preview.png" class="d-block" alt="Images" style="width: 110px; height: 100px; object-fit: fill;">
-                    <img src="img/download (4).png" class="d-block" alt="SUA" style="width: 110px; height: 100px; object-fit: fill;">
-                    <img src="img/download (6).png" class="d-block" alt="OFP" style="width: 110px; height: 100px; object-fit: fill;">
-                    <img src="img/blob-ac32ce9.png" class="d-block" alt="EACC" style="width: 150px; height: 150px; object-fit: fill;">
-                    <img src="img/download (1).png" class="d-block" alt="CRDB" style="width: 110px; height: 70px; object-fit: fill;">
+                    <img src="img/chuo_cha_takwim_15-removebg-preview.png" class="d-block" alt="Images" style="width: 110px; height: 100px; object-fit: cover;">
+                    <img src="img/download (4).png" class="d-block" alt="SUA" style="width: 110px; height: 100px; object-fit: cover;">
+                    <img src="img/download (6).png" class="d-block" alt="OFP" style="width: 110px; height: 100px; object-fit: cover;">
+                    <img src="img/blob-ac32ce9.png" class="d-block" alt="EACC" style="width: 150px; height: 150px; object-fit: cover;">
+                    <img src="img/download (1).png" class="d-block" alt="CRDB" style="width: 110px; height: 70px; object-fit: cover;">
                 </div>
             </div>
 
             <!-- Third Slide -->
             <div class="carousel-item">
                 <div class="d-flex justify-content-between">
-                    <img src="img/nbc.png" class="d-block" alt="NBC" style="width: 110px; height: 100px; object-fit: fill;">
-                    <img src="img/chuo_cha_takwim_15-removebg-preview.png" class="d-block" alt="HSELB" style="width: 110px; height: 100px; object-fit: fill;">
-                    <img src="img/download (3).jpeg" class="d-block" alt="M" style="width: 110px; height: 100px; object-fit: fill;">
-                    <img src="img/download (3).png" class="d-block" alt="Takwimu" style="width: 110px; height: 80px; object-fit: fill;">
-                    <img src="img/who.jpeg" class="d-block" alt="World Bank" style="width: 150px; height: 100px; object-fit: fill;">
+                    <img src="img/nbc.png" class="d-block" alt="NBC" style="width: 110px; height: 100px; object-fit: cover;">
+                    <img src="img/chuo_cha_takwim_15-removebg-preview.png" class="d-block" alt="HSELB" style="width: 110px; height: 100px; object-fit: cover;">
+                    <img src="img/download (3).jpeg" class="d-block" alt="M" style="width: 110px; height: 100px; object-fit: cover;">
+                    <img src="img/download (3).png" class="d-block" alt="Takwimu" style="width: 110px; height: 80px; object-fit: cover;">
+                    <img src="img/who.jpeg" class="d-block" alt="World Bank" style="width: 150px; height: 100px; object-fit: cover;">
                 </div>
             </div>
         </div>
