--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ box-shadow: 0 20px 20px -10px  rgb(66, 165, 245, 0.5);
         <div id="header-carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/carousel-1.jpg" alt="Image">
+                    <img class="w-100" src="img/us.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-md-3"  style="font-family: 'Times New Roman', Times, serif;">TMCS | TAKWIMU</h4>
