--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ box-shadow: 0 20px 20px -10px  rgb(66, 165, 245, 0.5);
 
 
 <div class="ball right-image">
-   <img src="images/cos/30_years.jpg" alt="User Avatar" class="img-fluid">
+   <img src="cia.png" alt="User Avatar" class="img-fluid">
 </div>
 
     
