--- a/index.html
+++ b/index.html
@@ -294,9 +294,9 @@ box-shadow: 0 20px 20px -10px  rgb(66, 165, 245, 0.5);
 
    
 <div class="social-icons">
-    <a href="https://www.facebook.com/EASTCplanwithfigures/?mibextid=ZbWKwL" target="_blank"><img src='face.png' style='width: 130%;   border-radius: 20px;'></a>
-    <a href="https://twitter.com/planwithfigures" target="_blank" class="ml-2"><img src='tgif.png' style='width: 115%;   border-radius: 100px;'></a>
-    <a href="https://instagram.com/chuo_cha_takwimu?igshid=NGExMmI2YTkyZg==" target="_blank"><img src='instagram.jpeg' style='width: 130%;'></a>
+    <a href="https://www.facebook.com/EASTCplanwithfigures/?mibextid=ZbWKwL" target="_blank"><img src='face.gif' style='width: 130%;   border-radius: 20px;'></a>
+    <a href="https://twitter.com/planwithfigures" target="_blank" class="ml-2"><img src='tgif.gif' style='width: 115%;'></a>
+    <a href="https://instagram.com/chuo_cha_takwimu?igshid=NGExMmI2YTkyZg==" target="_blank"><img src='instagram.gif' style='width: 130%;'></a>
     <a href="https://www.youtube.com/@TheEasternAfricaStatisticalTra" target="_blank"><img src='you.png' style='width: 130%;'></a>
 </div>
     
